--- a/src/app/fc-barcelona/fc-barcelona.component.html
+++ b/src/app/fc-barcelona/fc-barcelona.component.html
@@ -4,14 +4,14 @@
     <div class="count">
         <div style="text-align: center;" class="text">
             Count 
-            <button mat-fab disabled aria-label="Example icon button with a heart icon" style="background-color: black;">
+            <button mat-fab disabled aria-label="Example icon button with a trophy icon" style="background-color: black;">
                 <mat-icon style="color: #ffd700;">emoji_events</mat-icon>
             </button> = {{count}} 
         </div>
         <hr/>
         <button class="vote" (click)="onClick()">
             Vote - 
-            <button mat-fab color="primary" aria-label="Example icon button with a vertical three dot icon">
+            <button mat-fab color="primary" aria-label="Example icon button with a thumb up icon">
                 <mat-icon>thumb_up</mat-icon>
             </button>
         </button>
